refactor: MenuService 테스트 Fake 객체로 교체